Fixed navbar z-index

--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -49,7 +49,6 @@
 .header .nav {
     padding: 1rem 0;
     color: #F1EEE9;
-    z-index: 3;
 }
 
 .header a {
